--- a/StarsDate/wwwroot/lib/Costum/custom.css
+++ b/StarsDate/wwwroot/lib/Costum/custom.css
@@ -6,3 +6,10 @@
     padding: 40px 15px;
     text-align: center;
 }
+.profilePicture{
+    display:block;
+    max-height:200px;
+    max-width:200px;
+    width:auto;
+    height:auto
+}
