--- a/StarsDate/Views/Account/Login.cshtml
+++ b/StarsDate/Views/Account/Login.cshtml
@@ -1,31 +1,32 @@
 ﻿@model LoginVM
 
 
-<form class="form-horizontal" asp-controller="Account" asp-action="Login" method="post">
+<form class="form-horizontal col-md-4 col-lg-4 col-sm-4" asp-controller="Account" asp-action="Login" method="post">
     <h4>Login</h4>
     <div asp-validation-summary="All" class="text-danger"></div>
+   
+    
     <div>
-        <div class="col-md-6 col-xs-12 col-sm-6">
             <div class="form-group">
-                <label asp-for="Email" class="col-sm-4"></label>
+                <label asp-for="Email" ></label>
                 <input asp-for="Email" class="form-control" placeholder="Email Adresi" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-        </div>
-        <div class="col-md-6 col-xs-12 col-sm-6">
+            
             <div class="form-group">
-                <label asp-for="Password" class="col-sm-4"></label>
+                <label asp-for="Password" ></label>
                 <input asp-for="Password" class="form-control" placeholder="Şifre" />
                 <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-        </div>
+            </div>   
 
-        <button type="submit" class="btn btn-default form-group col-sm-2">Lofin</button>
+        <button type="submit" class="btn btn-default form-group">Login</button>
         <br /><br />
+        
         <div class="form-group">
             <h3>Not account yet?</h3>
             <a href="/Account/Register" class="btn btn-sm">Create here</a>
         </div>
+    
     </div>
 
 
