--- a/StarsDate/Views/Shared/_Layout.cshtml
+++ b/StarsDate/Views/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<ApplicationUser> SignInManager
+
+
+
+<!DOCTYPE html>
 
 <html>
 <head>
@@ -23,13 +28,24 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Project name</a>
+                    <a class="navbar-brand" href="@Url.Action("Index","Home")">StarDate</a>
                 </div>
                 <div id="navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        @if (SignInManager.IsSignedIn(User))
+                        {
+                            <li><a href="@Url.Action("Edit","Profile")">My Profile</a></li>
+                            <li><a href="@Url.Action("Search","Profile")">search</a></li>
+
+                        }
+                        else
+                        {
+                            <li><a href="@Url.Action("Register","Account")">Register Account</a></li>
+                            <li><a href="@Url.Action("Login","Account")">Login</a></li>
+                        }
+
+
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
@@ -50,5 +66,6 @@
     <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
 
+    @RenderSection("Scripts",false)
 </body>
 </html>
